Ok so that original idea was dumb but atleast css minifier pipeline now works

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -7,7 +7,8 @@
 
         <title>{{ t }}</title>
 
-        <style>{%include "compiled.css"%}</style>
+        {# <style>{%include "compiled.css"%}</style> #}
+        <link rel="stylesheet" href="/assets/styles.css">
         <link rel="canonical" href="{{ u }}">
 
         <meta name="title" content="ref_cycling - the website of Alex Westerman">
