--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -10,7 +10,7 @@ layout: 'layouts/base.njk'
             </div>
         </a>
     </div>
-    <article class='prose prose-green prose-invert grow lg:max-w-[125ch]'>
+    <article class='prose grow lg:max-w-[125ch]'>
         <h1>{{ postTitle }}</h1>
         <em>{{ excerpt }}</em>
         {{ content | safe }}
