--- a/src/main.css
+++ b/src/main.css
@@ -2,7 +2,7 @@
 @import "tw-animate-css";
 /* @plugin "@tailwindcss/typography"; */
 
-@custom-variant dark (&:is(.dark *));
+/* @custom-variant dark (&:is(.dark *)); */
 
 @font-face {
   font-family: "Rubik";
@@ -41,52 +41,26 @@
   --input: hsl(240 3.7% 15.9%);
   --ring: hsl(142.4 71.8% 29.2%);
 	--radius: 0.5rem;
-    --tw-prose-body: oklch(87.2% 0.01 258.338);
-    --tw-prose-headings: #fff;
-    --tw-prose-lead: oklch(70.7% 0.022 261.325);
-    --tw-prose-links: oklch(72.3% 0.219 149.579);
-    --tw-prose-bold: #fff;
-    --tw-prose-counters: oklch(70.7% 0.022 261.325);
-    --tw-prose-bullets: oklch(44.6% 0.03 256.802);
-    --tw-prose-hr: oklch(37.3% 0.034 259.733);
-    --tw-prose-quotes: oklch(96.7% 0.003 264.542);
-    --tw-prose-quote-borders: oklch(37.3% 0.034 259.733);
-    --tw-prose-captions: oklch(70.7% 0.022 261.325);
-    --tw-prose-kbd: #fff;
-    --tw-prose-kbd-shadows: 255 255 255;
-    --tw-prose-code: #fff;
-    --tw-prose-pre-code: oklch(87.2% 0.01 258.338);
-    --tw-prose-pre-bg: rgb(0 0 0 / 50%);
-    --tw-prose-th-borders: oklch(44.6% 0.03 256.802);
-    --tw-prose-td-borders: oklch(37.3% 0.034 259.733);
+  --tw-prose-body: oklch(87.2% 0.01 258.338);
+  --tw-prose-headings: #fff;
+  --tw-prose-lead: oklch(70.7% 0.022 261.325);
+  --tw-prose-links: oklch(72.3% 0.219 149.579);
+  --tw-prose-bold: #fff;
+  --tw-prose-counters: oklch(70.7% 0.022 261.325);
+  --tw-prose-bullets: oklch(44.6% 0.03 256.802);
+  --tw-prose-hr: oklch(37.3% 0.034 259.733);
+  --tw-prose-quotes: oklch(96.7% 0.003 264.542);
+  --tw-prose-quote-borders: oklch(37.3% 0.034 259.733);
+  --tw-prose-captions: oklch(70.7% 0.022 261.325);
+  --tw-prose-kbd: #fff;
+  --tw-prose-kbd-shadows: 255 255 255;
+  --tw-prose-code: #fff;
+  --tw-prose-pre-code: oklch(87.2% 0.01 258.338);
+  --tw-prose-pre-bg: rgb(0 0 0 / 50%);
+  --tw-prose-th-borders: oklch(44.6% 0.03 256.802);
+  --tw-prose-td-borders: oklch(37.3% 0.034 259.733);
 }
 
-.dark {
-  --background: hsl(20 14.3% 4.1%);
-  --foreground: hsl(0 0% 95%);
-  --card: hsl(24 9.8% 10%);
-  --card-foreground: hsl(0 0% 95%);
-  --popover: hsl(0 0% 9%);
-  --popover-foreground: hsl(0 0% 95%);
-  --primary: hsl(142.1 70.6% 45.3%);
-  --primary-foreground: hsl(144.9 80.4% 10%);
-  --secondary: hsl(240 3.7% 15.9%);
-  --secondary-foreground: hsl(0 0% 98%);
-  --muted: hsl(0 0% 15%);
-  --muted-foreground: hsl(240 5% 64.9%);
-  --accent: hsl(12 6.5% 15.1%);
-  --accent-foreground: hsl(0 0% 98%);
-  --destructive: hsl(0 62.8% 30.6%);
-  --destructive-foreground: hsl(0 85.7% 97.3%);
-  --border: hsl(240 3.7% 15.9%);
-  --input: hsl(240 3.7% 15.9%);
-  --ring: hsl(142.4 71.8% 29.2%);
-  --chart-1: hsl(220 70% 50%);
-  --chart-2: hsl(160 60% 45%);
-  --chart-3: hsl(30 80% 55%);
-  --chart-4: hsl(280 65% 60%);
-  --chart-5: hsl(340 75% 55%);
-}
 
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
@@ -111,19 +85,6 @@
   --color-border: var(--border);
   --color-input: var(--input);
   --color-ring: var(--ring);
-  --color-chart-1: var(--chart-1);
-  --color-chart-2: var(--chart-2);
-  --color-chart-3: var(--chart-3);
-  --color-chart-4: var(--chart-4);
-  --color-chart-5: var(--chart-5);
-  --color-sidebar: var(--sidebar);
-  --color-sidebar-foreground: var(--sidebar-foreground);
-  --color-sidebar-primary: var(--sidebar-primary);
-  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
-  --color-sidebar-accent: var(--sidebar-accent);
-  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
-  --color-sidebar-border: var(--sidebar-border);
-  --color-sidebar-ring: var(--sidebar-ring);
   --animate-accordion-down: accordion-down 1s ease-out;
   --animate-accordion-up: accordion-up 1s ease-out;
   --font-rubik: Rubik, sans-serif;
@@ -202,16 +163,16 @@
   body {
     @apply bg-background text-foreground;
   }
-  /* For using Shiki Styles */
-  html.dark .shiki,
+  /* For using Shiki Styles*/
+  /* html.dark .shiki,
   html.dark .shiki span {
     color: var(--shiki-dark) !important;
     background-color: var(--shiki-dark-bg) !important;
     /* Optional, if you also want font styles */
-    font-style: var(--shiki-dark-font-style) !important;
+    /*font-style: var(--shiki-dark-font-style) !important;
     font-weight: var(--shiki-dark-font-weight) !important;
     text-decoration: var(--shiki-dark-text-decoration) !important;
-  }
+  } */
   /* For providing a scroll + padding for all code blocks*/
   pre {
     overflow-x: auto;
