More CSS "Cleanup" + Fix Mobile Nav

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -106,6 +106,15 @@
                     </div>
                     <span class="w-max-10"></span>
                 </div>
+                <script>
+                    const mobileNavMenu = document.getElementById('mobileNavMenu');
+                    let isMenuOpen = false;
+                    const menuToggle = () => {
+                        isMenuOpen ? mobileNavMenu.classList.add('hidden') : mobileNavMenu.classList.remove('hidden');
+                        isMenuOpen = !isMenuOpen;
+                    };
+                    document.getElementById('mobileNavButton').onclick = () => menuToggle();
+                </script>
             </header>
             <main class="container mx-auto flex flex-col md:w-[80%]">
                 {{ content | safe }}
