--- a/src/index.njk
+++ b/src/index.njk
@@ -17,9 +17,9 @@ description: "The website of Alex Westerman. Checkout the blog for very cool (ra
                         src="assets/pfp.webp"/>
                 </div>
                 <div class="mb-8 self-center">
-                    <h1 class="text-6xl animated-gradient mx-auto bg-gradient-one delay-500 lg:mx-0 dark:bg-gradient-one-dark">Software Engineer;</h1>
-                    <h1 class="text-6xl animated-gradient mx-auto bg-gradient-two delay-1000 lg:mx-0 dark:bg-gradient-two-dark">Power User;</h1>
-                    <h1 class="text-6xl animated-gradient mx-auto bg-gradient-three lg:mx-0 dark:bg-gradient-three-dark">Problem Solver;</h1>
+                    <h1 class="text-6xl animated-gradient mx-auto bg-gradient-one delay-500 lg:mx-0">Software Engineer;</h1>
+                    <h1 class="text-6xl animated-gradient mx-auto bg-gradient-two delay-1000 lg:mx-0">Power User;</h1>
+                    <h1 class="text-6xl animated-gradient mx-auto bg-gradient-three lg:mx-0">Problem Solver;</h1>
                 </div>
             </div>
         </div>
