--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -17,7 +17,7 @@ layout: 'layouts/base.njk'
     </article>
     <br/>
     <em
-        class='prose prose-green dark:prose-invert mb-8 inline-flex self-center lg:flex'
+        class='prose mb-8 inline-flex self-center lg:flex'
         xmlns:cc='http://creativecommons.org/ns#'
         xmlns:dct='http://purl.org/dc/terms/'>
         <span property='dct:title' class='mr-1'>This post of the&nbsp;<code>ref_cycling</code>&nbsp;blog</span>
