--- a/src/blog.njk
+++ b/src/blog.njk
@@ -9,9 +9,9 @@ layout: 'layouts/base.njk'
 description: "AKA Core Dumping my brain on the Internet. A blog talking about various things in computers like Rust and software development. New posts SOON(TM)"
 ---
 <h1 class="mt-4 text-4xl"><code>ref_cycling - the blog</code></h1>
-<h2 class="mt-2 mb-4 text-2xl text-neutral-600 dark:text-neutral-400">AKA: Core Dumping my Brain on the Internet</h2>
+<h2 class="mt-2 mb-4 text-2xl text-neutral-600">AKA: Core Dumping my Brain on the Internet</h2>
 <p
-    class="prose prose-green dark:prose-invert inline-flex lg:flex"
+    class="prose inline-flex lg:flex"
     xmlns:cc="http://creativecommons.org/ns#"
     xmlns:dct="http://purl.org/dc/terms/">
     <span property="dct:title" class="mr-1">The <code>ref_cycling</code> blog</span>
